# DECK_WebTransport

./: README.md
dicm2deck/: CMakeLists.txt  README.md
dicm2deck/dicm/: README.md  datatypes.c  deck_sqlite3.c  dicm.c  main.c
dicm2deck/dicm/capi/: README.md  uapi.c
dicm2deck/dicm/capi/dicm2decksqlite3/: README.md  capi.c
dicm2deck/dicm/uapi/: README.md
dicm2deck/dicm/uapi/dicm2cda/: README.md  uapi.c
dicm2deck/dicm/uapi/dicmstructdump/: README.md  uapi.c
dicm2deck/doc/: repertoires.md
dicm2deck/doc/UIDshrinkage/: README.md
dicm2deck/doc/dcmtk-storescp/: README.md
dicm2deck/doc/sqlite/: README.md
dicm2deck/inc/: capi.h  datatypes.h  deck_sqlite3.h  dicm.h  uapi.h
dicm2deck/tests/: dscd.dicm
doc/: README.md
doc/subprojects/: README.md
doc/subprojects/DECK/: README.md
doc/subprojects/DECK/DECK canonical formats/: README.md  ordered contextual-keys format.md
doc/subprojects/DECK/dicm2deck/parser/C/: README.md
doc/subprojects/MIRO/: README.md
doc/subprojects/PACS/: README.md
doc/subprojects/PACS/db/: deck.db
miro/: README.md
pacs/: README.md
